--- a/style.css
+++ b/style.css
@@ -12,7 +12,56 @@ body {
     width: 100%; 
     margin: 0 auto; */
 }
-
+.contact-info{
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+.contact-info img{
+    width: 14px;
+    height: 14px;
+}
+.contact-info p{
+    font-family: Mulish;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 20px;
+    letter-spacing: 0%;
+}
+.right-section p{
+    font-family: Mulish;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17.57px;
+    letter-spacing: 0%;
+}
+.right-section i{
+    width: 15.58px;
+    height: 17px;
+}
+.language{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+.language p{
+    font-family: Mulish;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17.57px;
+    letter-spacing: 0%;
+}
+.language i{
+    width: 15.58px;
+    height: 17px;
+}
+.becomeaseller{
+    font-family: Mulish;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17.57px;
+    letter-spacing: 1%;
+}
 /* Topnavbar */
 .top-nav {
     background-color: #EDF5FF;
@@ -92,7 +141,7 @@ body {
     display: flex;
     align-items: center;
     gap: 15px;
-    color: #666;
+    color: #9B9B9B;
     font-size: 16px;
     border-right: 1px solid #B9B9B9;
 }
@@ -124,9 +173,103 @@ body {
     display: flex;
     align-items: center;
     justify-content: end;
-    background: #000;
     border-radius: 5px;
 }
+
+/* first header responsive design */
+@media (max-width: 1024px) { 
+    .first-head {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        padding: 10px;
+    }
+    .head-right-img img{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .logo {
+        font-size: 18px;
+    }
+
+    .search-container {
+        max-width: 50%;
+        margin: 10px 0;
+    }
+
+    .head-right-img {
+        width: 180px;
+        height: 50px;
+    }
+}
+
+@media (max-width: 768px) { 
+    .first-head {
+        flex-direction: column;
+        height: auto;
+        gap: 8px;
+    }
+
+    .logo {
+        font-size: 16px;
+    }
+
+    .search-container {
+        width: 90%;
+        max-width: 400px;
+    }
+
+    .search-input {
+        font-size: 14px;
+        padding: 8px;
+    }
+
+    .menu-btn, .search-btn {
+        font-size: 14px;
+        padding: 13px;
+    }
+
+    .head-right-img img{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 480px) { 
+    .first-head {
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .logo {
+        font-size: 14px;
+    }
+
+    .search-container {
+        width: 100%;
+        max-width: 350px;
+    }
+
+    .search-input {
+        font-size: 14px;
+    }
+
+    .search-btn {
+        padding: 13px;
+        font-size: 14px;
+    }
+
+    .head-right-img img{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
 /* second Header Container */
 .second-header {
     background-color: white;
@@ -134,8 +277,6 @@ body {
     border-width: 1px 0px 1px 0px;
     border-style: solid;
     border-color: #B9B9B966;
-    
-    /* padding: 10px 20px; */
 }
 
 /* Navbar */
@@ -182,7 +323,7 @@ body {
 .nav-links {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 16px;
     list-style: none;
     flex: 1;
     justify-content: center;
@@ -192,21 +333,31 @@ body {
 
 .nav-links a {
     text-decoration: none;
-    color: #333;
-    font-weight: 500;
-    font-size: 15px;
+    font-family: Mulish;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 16.32px;
+    letter-spacing: 1%;
+    color: #222222;
     
 }
 .nav-links .dropdown a {
     display: flex;
     align-items: center;
     gap: 15px;
+    font-family: Mulish;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 16.32px;
+    letter-spacing: 1%;
+    color: #222222;
 }
 .offer-badge {
     display: flex;
     align-items: center;
-    justify-content: center; 
-    height: 100%; 
+    justify-content: center;
+    gap: 8px;
+    /* height: 100%;  */
 }
 
 .offer-badge img{
@@ -232,10 +383,12 @@ body {
 }
 
 .login i {
-    font-size: 18px;
+    width: 21px;
+    height: 21px;
     color: gray;
     border-radius: 100%;
-    padding: 6px;
+    padding: 4.5px;
+    padding-top: -2px;
     background: #B9B9B9;
 }
 
@@ -323,101 +476,21 @@ body {
         text-align: center;
     }
 }
-/* first header responsive design */
-@media (max-width: 1024px) { 
-    .first-head {
-        height: auto;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-        padding: 10px;
-    }
 
-    .logo {
-        font-size: 18px;
-    }
-
-    .search-container {
-        max-width: 100%;
-        margin: 10px 0;
-    }
-
-    .head-right-img {
-        width: 180px;
-        height: 50px;
-    }
-}
-
-@media (max-width: 768px) { 
-    .first-head {
-        flex-direction: column;
-        height: auto;
-        gap: 8px;
-    }
-
-    .logo {
-        font-size: 16px;
-    }
-
-    .search-container {
-        width: 90%;
-        max-width: 400px;
-    }
-
-    .search-input {
-        font-size: 14px;
-        padding: 8px;
-    }
-
-    .menu-btn, .search-btn {
-        font-size: 14px;
-        padding: 13px;
-    }
-
-    .head-right-img {
-        width: 160px;
-        height: 45px;
-    }
-}
-
-@media (max-width: 480px) { 
-    .first-head {
-        flex-direction: column;
-        gap: 5px;
-    }
-
-    .logo {
-        font-size: 14px;
-    }
-
-    .search-container {
-        width: 100%;
-        max-width: 350px;
-    }
-
-    .search-input {
-        font-size: 14px;
-    }
-
-    .search-btn {
-        padding: 13px;
-        font-size: 14px;
-    }
-
-    .head-right-img {
-        width: 140px;
-        height: 40px;
-        margin-top: 5px;
-    }
-}
 /*Second header Responsive Design */
 @media (max-width: 1024px) {
+    .second-header{
+        margin-top: 16px;
+    }
     .nav-container {
         margin: 16px;
+        flex-direction: column;
+        height: 100%;
     }
     .nav-links {
         gap: 15px;
         font-size: 14px;
+        margin: 12px 0;
     }
 
     .right-menu {
@@ -437,9 +510,9 @@ body {
         margin: 16px;
     }
 
-    /* .nav-links {
-        display: none;
-    } */
+    .nav-links {
+        margin: 16px;
+    }
 
     .right-menu {
         gap: 10px;
@@ -484,8 +557,10 @@ body {
 .main-container {
     width: 100%;
     max-width: 1201px;
-    margin: auto;
-    padding-top: 16px;
+    margin:16px auto;
+    padding: 16px 0;
+    border: 1px solid #919EAB0D;
+    border-radius: 4px;
 }
 
 .parent-container {
@@ -577,7 +652,7 @@ body {
 
 .cyber-img img {
     width: 100%;
-    height: 460px;
+    height: 464px;
     object-fit: cover;
 }
 
@@ -647,6 +722,9 @@ body {
         flex-direction: column;
         align-items: center;
     }
+    .main-container h5 {
+       text-align: center;
+    }
 
     .sidebar {
         width: 100%;
@@ -661,6 +739,7 @@ body {
 
     .sidebar ul li {
         width: 100%;
+        min-width: 250px;
         font-size: 12px;
         padding: 8px;
         margin: 5px 0;
@@ -706,7 +785,8 @@ body {
     max-width: 1201px;
     height: 320px;
     margin: 30px auto;
-    box-shadow: 0px 4px 10px rgba(216, 215, 215, 0.5);
+    box-shadow: 0px 4px 10px rgba(216, 215, 215, 0.185);
+    border: 1px solid rgba(216, 215, 215, 0.185);
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -795,7 +875,7 @@ body {
     background: white;
     border-radius: 8px;
     padding: 15px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); */
     text-align: center;
 }
 
@@ -804,44 +884,159 @@ body {
     height: auto;
     border-radius: 8px;
 }
-
-h3 {
-    font-size: 16px;
-    margin: 10px 0;
+.rating-container{
+    display: flex;
+    align-items: center;
+    gap: 4px;
 }
-
+.rating-container p{
+    color: #b9b9b967;
+    margin: 8px 0;
+}
+.rating{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    justify-content: start;
+    color: #FFBA49;
+}
+.rating i{
+    width: 14px;
+    height: 14px;
+}
+.product-name{
+    text-align: start;
+    font-family: Mulish;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 13.81px;
+    letter-spacing: 0%;
+}
+.product-description{
+    font-family: Mulish;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 17.57px;
+    letter-spacing: 0%;
+    text-align: start;
+    margin: 4px 0;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+    max-width: 200px;
+}
+.child-card{
+    position: relative;
+}
+.child-card .producttopright{
+    position: absolute;
+    width: 54px;
+    height: 54px;
+    top: 0;
+    right: 0;
+}
+.child-card .productcart{
+    position: absolute;
+    width: 36px;
+    height: 36px;
+    right: 10px;
+    bottom: 110px;
+}
+.discount{
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    background: #DB3022;
+    width: 45;
+    height: 24;
+    border-radius: 29px;
+    font-family: Mulish;
+    font-weight: 800;
+    font-size: 12px;
+    line-height: 15.06px;
+    letter-spacing: 0px;
+    text-align: center;
+    color: white;
+    padding: 4px 8px;
+}
 .old-price {
     text-decoration: line-through;
     color: gray;
 }
-
+.price{
+    text-align: start;
+}
 .new-price {
-    color: red;
+    color: #1455AC;
     font-weight: bold;
 }
-
-.nav-btn {
-    background: #fff;
-    border: none;
-    font-size: 30px;
+.nav-btn{
+    background: #1455ACE5;
+    color: white;
+    width: 39px;
+    height: 39px;
+    border-radius: 45px;
     cursor: pointer;
-    padding: 10px;
-    border-radius: 50%;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    font-size: 26px;
 }
 
-.nav-btn:hover {
-    background: #ddd;
-}
+/* Responsive Design */
+@media (max-width: 1024px) {
+    .flash-container {
+        flex-direction: column;
+        text-align: center;
+        gap: 15px;
+        height: 100%;
+    }
 
-@media (max-width: 768px) {
+    .flash-card {
+        width: 100%;
+    }
+
+    .flash-time-container {
+        justify-content: center;
+    }
+
+    .slider-container {
+        width: 100%;
+        flex-direction: row;
+    }
+
     .card {
-        min-width: 48%;
+        min-width: 45%;
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
+    .flash-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .flash-card {
+        width: 100%;
+    }
+
+    .flash-time-container {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .card-slider {
+        overflow-x: scroll;
+        scroll-snap-type: x mandatory;
+    }
+
     .card {
-        min-width: 100%;
+        min-width: 80%;
+        max-width: 90%;
+        scroll-snap-align: start;
+    }
+
+    .nav-btn {
+        display: none;
     }
 }
