--- a/style.css
+++ b/style.css
@@ -24,35 +24,50 @@ body {
     line-height: 20px;
     letter-spacing: 0%;
 }
-.right-section p{
-    font-family: Mulish;
-    font-weight: 400;
+/* Right Section Styling */
+.right-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+    /* width: 185px; */
+}
+
+/* Custom Select Styling */
+.custom-select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
     font-size: 14px;
-    line-height: 17.57px;
-    letter-spacing: 0%;
+    font-weight: 400;
+    padding: 2px 2px;
+    width: 100px;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    color: #333;
+    background: none;
+    border: none;
 }
-.right-section i{
-    width: 15.58px;
-    height: 17px;
+
+/* Add dropdown icon */
+.custom-select {
+    background-image: url('data:image/svg+xml;utf8,<svg fill="%23333" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 14px;
+    padding-right: 30px;
 }
-.language{
+.custom-select option{
     display: flex;
     align-items: center;
-    gap: 6px;
 }
-.language p{
-    font-family: Mulish;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17.57px;
-    letter-spacing: 0%;
+.custom-select option img{
+    width: 16px;
+    height: 16px;
 }
-.language i{
-    width: 15.58px;
-    height: 17px;
-}
-.becomeaseller{
-    font-family: Mulish;
+/* Become a Seller Button */
+.becomeaseller {
     font-weight: 400;
     font-size: 14px;
     line-height: 17.57px;
@@ -444,11 +459,22 @@ body {
 
 @media screen and (max-width: 768px) {
     .top-bar {
-        flex-direction: column;
+        flex-direction: row;
+    }
+    .custom-select {
+        width: 78px;
+    }
+    #dropdown-language{
+        width: 100px;
+    }
+    .becomeaseller{
+        display: none;
+    }
+    .right-section{
+        display: flex;
+        flex-direction: row;
         align-items: center;
-        text-align: center;
-        padding: 10px 0px;
-        height: 60px;
+        gap: 0px !important;
     }
 
     .search-bar {
@@ -545,6 +571,80 @@ body {
         display: flex;
         flex-direction: column;
         width: auto;
+    }
+}
+/* Hide the checkbox */
+.drawer-checkbox {
+    display: none;
+}
+.drawer-container{
+    display: none;
+}
+
+/* Icon styling */
+.drawer-icon {
+    font-size: 24px;
+    margin-top: 8px;
+    margin-left: 4px;
+    cursor: pointer;
+    padding: 2px 4px;
+    background: #1455AC;
+    color: white;
+    border-radius: 5px;
+    display: inline-block;
+}
+
+/* Drawer Styling */
+.drawer {
+    position: fixed;
+    top: 0;
+    left: -250px; /* Initially hidden */
+    width: 250px;
+    height: 100%;
+    background: #333;
+    color: white;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+    transition: left 0.3s ease;
+}
+
+/* Drawer Content */
+.drawer ul {
+    list-style: none;
+    padding: 0;
+}
+
+.drawer ul li {
+    padding: 10px 0;
+}
+
+.drawer ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+/* Close button */
+.close-btn {
+    font-size: 20px;
+    cursor: pointer;
+    display: block;
+    text-align: right;
+}
+
+/* Show drawer when checkbox is checked */
+.drawer-checkbox:checked + .drawer-icon + .drawer {
+    left: 0;
+}
+@media (max-width: 768px) {
+    .drawer-container{
+        display: block;
+    }
+    .first-head{
+        display: none;
+    }
+    .second-header{
+        display: none;
     }
 }
 
